fix letters clipping on bottom

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -93,3 +93,7 @@
   background-color: white;
   cursor: default;
 }
+
+.normal-height {
+  line-height: normal;
+}
